syntax = "proto3";

package com.fileMessage;

enum FileMessageType {
    option allow_alias = true;
    ADD = 0;
    UPDATE = 1;
    DELETE = 2;
    OTHER = 3;
}

message FileMessage {
    string user = 1;
    string filename = 2;
    string path = 3;
    FileMessageType type = 4;
    int32 timestamp = 5;
    string data = 6;
}